--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -19,7 +19,7 @@ body {
 .quiz-container {
   width: 600px;
   overflow: hidden;
-  background-color: rgba(221, 221, 221, 0.4);
+  background-color: rgba(221, 221, 221, 0.45);
   box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
   border-radius: 10px;
 }
@@ -47,10 +47,12 @@ ul li {
   margin: 1rem 0;
   letter-spacing: 1px;
   font-size: 1.5rem;
+  color: #082032;
 }
 
 ul li label {
   cursor: pointer;
+  padding: 5px;
 }
 
 button {
